--- a/RD_Ancheta_Surveying_Services/about.html
+++ b/RD_Ancheta_Surveying_Services/about.html
@@ -17,10 +17,10 @@
 
       <section class="flex">
    
-         <a href="home.html" class="logo"><img id="logo" src="/images1/name.png"></a>
+         <a href="index.html" class="logo"><img id="logo" src="/images1/name.png"></a>
    
          <nav class="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="menu.html">Services</a>
             <a href="contact.html">Contact</a>
@@ -38,7 +38,7 @@
 
 <div class="heading">
    <h3>About us</h3>
-   <p><a href="home.html">Home </a> <span> / About</span></p>
+   <p><a href="index.html">Home </a> <span> / About</span></p>
 </div>
 
 <section class="about">
