--- a/RD_Ancheta_Surveying_Services/contact.html
+++ b/RD_Ancheta_Surveying_Services/contact.html
@@ -16,10 +16,10 @@
 
       <section class="flex">
    
-         <a href="home.html" class="logo"><img id="logo" src="/images1/name.png"></a>
+         <a href="index.html" class="logo"><img id="logo" src="/images1/name.png"></a>
    
          <nav class="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="menu.html">Services</a>
             <a href="contact.html">Contact</a>
@@ -37,7 +37,7 @@
 
 <div class="heading">
    <h3>contact us</h3>
-   <p><a href="home.html">home </a> <span> / contact</span></p>
+   <p><a href="index.html">home </a> <span> / contact</span></p>
 </div>
 
 <section class="contact">
